# phiture-task

./: README.md  docker-compose.yaml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py  products.json
backend/tests/: test_app.py
frontend/: Dockerfile  next.config.js  package.json
frontend/pages/: index.tsx
